# PokemonCardScanner

./: .gitignore  README.md  download_card.py  pyproject.toml  sorted_cards_info.csv
pokemon_card_recognition/: card_detector.py  card_infos.py  card_matcher.py  main.py
